src/test/deca/syntax/invalid/test_synt19.deca
//Resultat:
//      Erreur syntaxique : definition d'une classe à l'interieur d'une autre
class A extends B{
class C{}
}
